--- a/tarea1.htm
+++ b/tarea1.htm
@@ -12,8 +12,12 @@
             <a href="#">Inicio</a>
             <a href="#">Acerca de mi</a>
             <a href="#">Trabajos destacados</a>
-            <a href="#">Referencias</a>
+            <a hre="#">Referencias</a>
         </nav>
+        <section class="contenedor principal">
+            <h1 class="titulo pagina-web">Gabriela Alejandra Campos Valencia</h1>
+        </section>
     </header>
+    
 </body>
 </html>
