creacion de secciones

--- a/tarea1.htm
+++ b/tarea1.htm
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
     <title>Gabriela Campos</title>
 </head>
 <body>
@@ -18,6 +19,22 @@
             <h1 class="titulo pagina-web">Gabriela Alejandra Campos Valencia</h1>
         </section>
     </header>
-    
+
+    <main>
+        <section class="box acerca-de-mi">
+            <h2 class="titulo acerca-de-mi">Acerca de mi</h2>
+        </section>
+
+        <section class="box trabajos-destacados">
+            <h2 class="titulo trabajos-destacados">Mis trabajos destacados</h2>
+        </section>
+
+        <section class="box recomendaciones">
+            <h2 class="titulo referencias">Referencias</h2>
+        </section>
+
+
+    </main>
+
 </body>
 </html>
