estilo a secciones y titulos

--- a/tarea1.htm
+++ b/tarea1.htm
@@ -13,10 +13,10 @@
             <a href="#">Inicio</a>
             <a href="#">Acerca de mi</a>
             <a href="#">Trabajos destacados</a>
-            <a hre="#">Referencias</a>
+            <a href="#">Referencias</a>
         </nav>
         <section class="contenedor principal">
-            <h1 class="titulo pagina-web">Gabriela Alejandra Campos Valencia</h1>
+            <h1 class="titulo1 pagina-web">Gabriela Alejandra Campos Valencia</h1>
         </section>
     </header>
 
