darle forma al menu

--- a/tarea1.htm
+++ b/tarea1.htm
@@ -15,12 +15,13 @@
             <a href="#">Trabajos destacados</a>
             <a href="#">Referencias</a>
         </nav>
-        <section class="contenedor principal">
+        <section class="box principal">
             <h1 class="titulo1 pagina-web">Gabriela Alejandra Campos Valencia</h1>
         </section>
     </header>
 
     <main>
+
         <section class="box acerca-de-mi">
             <h2 class="titulo acerca-de-mi">Acerca de mi</h2>
         </section>
