seccion acerca de mi

--- a/tarea1.htm
+++ b/tarea1.htm
@@ -24,6 +24,30 @@
 
         <section class="box acerca-de-mi">
             <h2 class="titulo acerca-de-mi">Acerca de mi</h2>
+            <div class="clase-acerca-de-mi">
+                <img src="img/yo.jpeg" alt="" class ="imagen-acerca-de-mi">
+                <div class="texto-acerca-de-mi">
+                    <br>
+                    <li>
+                        <b>Email: </b>
+                        <a href="20202235@esen.edu.sv">20202235@esen.edu.sv</a>
+                    </li>
+                    <li>
+                        <b>Github: </b>
+                        <a href="https://github.com/gabrielacampos02">https://github.com/gabrielacampos02</a>
+                    </li>
+                    <li>
+                        <b>Numero de contacto: </b>(503) 7890 9792
+                    </li>
+                    <br>
+                    <br>
+                    <p>Mi nombre es Gabriela Campos, estoy cursando mi tercer año de la
+                        carrera Ingeniería de Negocios en la Escuela Superior de Economía
+                        y Negocios (ESEN). Soy una persona creativa, responsable y
+                        proactiva. Me considero un líder y me gusta ayudar a los demás en
+                        lo que necesiten.</p>
+                </div>
+            </div>
         </section>
 
         <section class="box trabajos-destacados">
