galeria de fotos y texto

--- a/tarea1.htm
+++ b/tarea1.htm
@@ -52,6 +52,141 @@
 
         <section class="box trabajos-destacados">
             <h2 class="titulo trabajos-destacados">Mis trabajos destacados</h2>
+            <div class="galeria" style="--w: 100vw; --h: 500 px">
+                <input type="radio" name="navegacion" id="_1" checked />
+                <input type="radio" name="navegacion" id="_2" />
+                <input type="radio" name="navegacion" id="_3" />
+                <input type="radio" name="navegacion" id="_4" />
+                <input type="radio" name="navegacion" id="_5" />
+
+                <div class="contenedor-imagen">
+
+                    <div class="espacio">
+                    </div>
+
+                    <img 
+                    src="img/yo.jpeg" 
+                    width="48%"
+                    height="290"
+                    alt="Galeria CSS 1"
+                    />
+
+                    <div class="espacio">
+                    </div>
+
+                    <div class="contenedor-texto">
+                        <h1 class="subtitulos">Rediseño de experiencia en el museo Tín Marín</h1>
+                        <br>
+                        <p>En la materia de Diseño de Servicios, junto a un grupo de compañeros, 
+                            rediseñamos la experiencia del museo para niños. Tomamos en cuenta las 
+                            necesidades y los deseos de los usuarios principales, con lo cual tuvimos un 
+                            resultado satisfactorio. </p>
+                    </div>
+
+                    <div class="espacio">
+                    </div>
+
+                </div>
+
+                <div class="contenedor-imagen">
+
+                    <div class="espacio">
+                    </div>
+
+                    <img 
+                    src="img/yo.jpeg" 
+                    width="48%"
+                    height="290"
+                    alt="Galeria CSS 2"
+                    />
+
+                    <div class="espacio">
+                    </div>
+
+                    <div class="contenedor-texto">
+                        <h1>Presidenta de comité de MUN ESEN</h1>
+                        <br>
+                        <p>El año pasado, presidí dos comités en Modelos de las Naciones Unidad y Modelo 
+                            de la Unión Europea. En los cuales fui la encargada de la creación de la guía 
+                            académica, y de llevar el orden en el debate con aproximadamente 15 delegados. </p>
+                    </div>
+                </div>
+
+                <div class="contenedor-imagen">
+
+                    <div class="espacio">
+                    </div>
+
+                    <img 
+                    src="img/yo.jpeg" 
+                    width="48%"
+                    height="290"
+                    alt="Galeria CSS 3"
+                    />
+
+                    <div class="espacio">
+                    </div>
+
+                    <div class="contenedor-texto">
+                        <br>
+                        <h1>Directora de Relaciones Publicas del Club Rotaract – Santa Tecla ESEN</h1>
+                        <br>
+                        <p>En el Club Rotaract, tomé el cargo de ser directora de relaciones públicas, manejando 
+                            todas las redes sociales de la asociación. Además, ayudo a todo el marketing que las 
+                            actividades que se realizan conllevan.</p>
+                    </div>
+                </div>
+
+                <div class="contenedor-imagen">
+
+                    <div class="espacio">
+                    </div>
+
+                    <img 
+                    src="img/yo.jpeg" 
+                    width="48%"
+                    height="290"
+                    alt="Galeria CSS 4"
+                    />
+
+                    <div class="espacio">
+                    </div>
+
+                    <div class="contenedor-texto">
+                        <h1>Diseño de una metodología hibrida para ESEN</h1>
+                        <br>
+                        <p>En la materia de Metodología de Diseño diseñé, junto a unos compañeros, 
+                            la metodología hibrida que podía seguir la escuela. Este proyecto se concretó 
+                            a base de entrevistas y análisis de necesidades. Los resultados fueron compartidos 
+                            a las autoridades de la ESEN. </p>
+                    </div>
+                </div>
+
+                <div class="contenedor-imagen">
+
+                    <div class="espacio">
+                    </div>
+
+                    <img 
+                    src="img/yo.jpeg" 
+                    width="48%"
+                    height="290"
+                    alt="Galeria CSS 5"
+                    />
+
+                    <div class="espacio">
+                    </div>
+
+                    <div class="contenedor-texto">
+                        <h1>Pasantía en el departamento de Innovación del Banco Agrícola</h1>
+                        <br>
+                        <p>Durante las vacaciones 2021 – 2022, tuve la oportunidad de ser pasante en el departamento 
+                            de innovación del Banco Agricola, trabajando de la mano con gerentes y supervisores. Pude 
+                            aprender diferentes herramientas y metodologías de diseño.  </p>
+                    </div>
+                </div>
+
+            </div>
         </section>
 
         <section class="box recomendaciones">
