--- a/tarea1.htm
+++ b/tarea1.htm
@@ -11,9 +11,9 @@
     <header>
         <nav>
             <a href="#">Inicio</a>
-            <a href="box acerca-de-mi">Acerca de mi</a>
-            <a href="box trabajos-destacados">Trabajos destacados</a>
-            <a href="box referencias">Referencias</a>
+            <a href=#S1>Acerca de mi</a>
+            <a href=#S2>Trabajos destacados</a>
+            <a href=#S3>Referencias</a>
         </nav>
         <section class="box1 principal">
             <h1 class="titulo1 pagina-web">Gabriela Alejandra Campos Valencia</h1>
@@ -24,7 +24,7 @@
 
     <main>
 
-        <section class="box acerca-de-mi">
+        <section class="box acerca-de-mi" id="S1">
             <h2 class="titulo acerca-de-mi">Acerca de mi</h2>
             <div class="clase-acerca-de-mi">
                 <img src="img/yo.jpeg" alt="" class ="imagen-acerca-de-mi">
@@ -62,7 +62,7 @@
 
         <section class="divisores"></section>
         
-        <section class="box trabajos-destacados">
+        <section class="box trabajos-destacados" id="S2">
             <h2 class="titulo trabajos-destacados">Mis trabajos destacados</h2>
             <div class="galeria" style="--w: 100vw; --h: 500 px">
                 <input type="radio" name="navegacion" id="_1" checked />
@@ -99,7 +99,7 @@
                     <div class="contenedor-texto">
                         <h1>Presidenta de comité de MUN ESEN</h1>
                         <br>
-                        <p>El año pasado, presidí dos comités en Modelos de las Naciones Unidad y Modelo 
+                        <p>El año pasado, presidí dos comités en un Modelo de las Naciones Unidad y un Modelo 
                             de la Unión Europea. En los cuales fui la encargada de la creación de la guía 
                             académica, y de llevar el orden en el debate con aproximadamente 15 delegados. </p>
                     </div>
@@ -124,8 +124,8 @@
                         <h1>Directora de Relaciones Publicas del Club Rotaract – Santa Tecla ESEN</h1>
                         <br>
                         <p>En el Club Rotaract, tomé el cargo de ser directora de relaciones públicas, manejando 
-                            todas las redes sociales de la asociación. Además, ayudo a todo el marketing que las 
-                            actividades que se realizan conllevan.</p>
+                            todas las redes sociales de la asociación. Además, ayudo con la creacion de todo el 
+                            marketing que las actividades que se realizan conllevan.</p>
                     </div>
 
                     <div class="espacio">
@@ -166,7 +166,7 @@
                 <div class="contenedor-imagen">
 
                     <div class="contenedor-texto">
-                        <h1>Pasantía en el departamento de Innovación del Banco Agrícola</h1>
+                        <h1>Pasantía en el departamento de Innovación y Ecosistemas del Banco Agrícola</h1>
                         <br>
                         <p>Durante las vacaciones 2021 – 2022, tuve la oportunidad de ser pasante en el departamento 
                             de innovación del Banco Agricola, trabajando de la mano con gerentes y supervisores. Pude 
@@ -190,13 +190,13 @@
 
         <section class="divisores"></section>
 
-        <section class="box recomendaciones">
+        <section class="box recomendaciones" id="S3">
             <h2 class="titulo referencias">Referencias</h2>
             <table>
 
                 <tr>
                     <td><img
-                        src="img/alberto.jpeg"
+                        src="img/jessica.jpeg"
                         width="100"
                         height="100"
                         alt="JP"
