--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 <tr>
                 <td><i>Gerente de Innovación y Ecosistemas del Bancoagricola</i></td>
                 <td><i>Coordinador de matemáticas de la Escuela Superior de Economía y Negocios</i></td>
-                <td><i>Rector de la Escuela Superior de Economía y Negocios</i></td>
+                <td><i>Director General de la Escuela Superior de Economía y Negocios</i></td>
                 </tr>
 
                 <tr>
